packages/EasyExtend/EasyExtend-3.0-beta2-py2.5.zip/EasyExtend-3.0-beta2-py2.5/EasyExtend/langlets/grammar_langlet/parsedef/Grammar
# Grammars Grammar

single_input: NEWLINE  # this is a dummy
file_input: ( RULE | NEWLINE )* ENDMARKER
RULE: NAME ':' RHS NEWLINE
RHS: ALT ( '|' ALT )*
ALT: ITEM+
ITEM: '[' RHS ']' | ATOM [ '*' | '+' ]
ATOM: '(' RHS ')' | NAME | STRING | '_'
